--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,23 @@
 html {
-    scroll-behavior: smooth;
-  }
-  
-
-*{
-    padding: 0;
-    margin: 0;
+  scroll-behavior: smooth;
 }
 
-body{
+
+* {
+  padding: 0;
+  margin: 0;
+}
+
+.fade-in {
+  opacity: 0;
+  /* Empieza con opacidad 0 para ocultar el componente */
+  animation: fadeIn 0.5s ease-in forwards;
+  /* Animación de fundido */
+}
+
+@keyframes fadeIn {
+  to {
+    opacity: 1;
+    /* Llega a una opacidad de 1 para mostrar el componente */
+  }
 }
