--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,7 @@
   gap: 20px;
   /* Espacio entre los elementos */
   list-style: none;
+  box-shadow: 10px 10px 10px rgb(0,0,0, 0.1) inset;
 }
 
 .producto {
@@ -14,6 +15,8 @@
   text-align: center;
   cursor: pointer;
   border-radius: 1em;
+  box-shadow:
+  10px 10px 10px rgb(0,0,0, 0.5) inset;
 }
 
 .producto img {
@@ -70,8 +73,8 @@
   background-color: #0d7106;
   color: #fff;
   cursor: pointer;
-  box-shadow: 0 4px 6px  #0d7106;;
   transition: all 0.3s ease;
+  box-shadow: 10px 10px 10px rgb(0,0,0, 0.1) inset, .3em 4px 20px  #0d7106be;
 }
 
 /* Efecto de sombra al pasar el mouse */
@@ -163,14 +166,20 @@
   #a-almacen{
     background: #007bff;
     border-radius: 2px;
+    box-shadow: 10px 10px 10px rgba(45, 45, 212, 0.63) inset;
+
   }
   #a-verduleria{
     background: #40ff00be;
     border-radius: 2px;
+    box-shadow: 10px 10px 10px rgba(50, 212, 45, 0.63) inset;
+
   }
   #a-otros{
     background: #ffd900f6;
     border-radius: 2px;
+    box-shadow: 10px 10px 10px rgba(201, 212, 45, 0.63) inset;
+
   }
 
   #Almacen-ul{
