--- a/src/index.css
+++ b/src/index.css
@@ -129,7 +129,6 @@
 
   }
 
-
   .producto img {
     border-radius: .4em;
     margin-top: .2em;
@@ -152,7 +151,9 @@
     background: #3333336b;
     position: fixed;
     display: flex;
+    width: 100%;
     flex-direction: column;
+    align-items: center;
     top: 2em;
     left: 50%;
     transform: translate(-50%, -50%);
