--- a/src/index.css
+++ b/src/index.css
@@ -137,12 +137,11 @@
   }
 
   .header-buttons {
-    margin-top: 1em;
+    margin-top: 1.2em;
     margin-bottom: 10px;
   }
 
   .interactive-button {
-    padding: 8px 16px;
     font-size: 16px;
   }
 
@@ -153,12 +152,10 @@
     display: flex;
     width: 100%;
     flex-direction: column;
-    align-items: center;
     top: 2em;
     left: 50%;
     transform: translate(-50%, -46%);
     text-align: center;
-    padding-bottom: 1.1em;
   }
 
   .header-buttons #buttons {
@@ -167,15 +164,21 @@
   }
 
   .interactive-button {
-    margin: 1em;
+    
   }
 
   #buttons {
     margin: 0 auto;
+    display: flex;
+    width: 100%;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+    
   }
 
   a {
-    font-size: 1.1em;
+    font-size: 1em;
   }
 
   #a-almacen {
@@ -237,17 +240,27 @@
 
 
   #categorias-top{
-    margin-bottom: 1.2em;
+    margin-bottom: .2em;
+    display: flex;
+    justify-content: space-around;
+
   }
 
   #links-categorias {
+    width: 100%;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-between;
+  }
+
+  #links-categorias2 {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
   }
 
   #links-categorias a {
-    margin: 0 .5em;
     text-decoration: none;
     padding: .4em;
   }
