--- a/src/index.css
+++ b/src/index.css
@@ -105,6 +105,7 @@
 
 @media screen and (max-width: 450px) {
   body {
+    overflow: hidden;
     background-color: #f2f2f2;
     /* Color de fondo */
     color: #1a1919;
@@ -147,6 +148,8 @@
 
 
   .header-buttons {
+    overflow: hidden;
+
     background: #3333336b;
     position: fixed;
     display: flex;
