--- a/src/index.css
+++ b/src/index.css
@@ -105,7 +105,6 @@
 
 @media screen and (max-width: 450px) {
   body {
-    overflow: hidden;
     background-color: #f2f2f2;
     /* Color de fondo */
     color: #1a1919;
@@ -126,8 +125,8 @@
     gap: .7em;
     /* Espacio entre los elementos */
     list-style: none;
-    padding: 2px;
-
+    width: 99%;
+    margin: 0 auto;
   }
 
   .producto img {
@@ -148,7 +147,6 @@
 
 
   .header-buttons {
-    overflow: hidden;
 
     background: #3333336b;
     position: fixed;
@@ -180,7 +178,6 @@
   }
 
   a {
-    font-size: 1em;
   }
 
   #a-almacen {
