--- a/src/index.css
+++ b/src/index.css
@@ -177,8 +177,6 @@
     
   }
 
-  a {
-  }
 
   #a-almacen {
     background: #007bff;
@@ -215,7 +213,7 @@
   #Almacen-ul {
     background: rgb(126, 118, 218);
     background: linear-gradient(52deg, rgba(236, 235, 132, 1) 0%, rgba(35, 152, 208, 1) 100%);
-    margin-top: 7.1em;
+    margin-top: 7.5em;
   }
 
   #Verduleria-ul {
@@ -246,21 +244,19 @@
   }
 
   #links-categorias {
-    width: 100%;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
   }
 
   #links-categorias2 {
-    width: 100%;
     display: flex;
     flex-direction: row;
-    justify-content: space-evenly;
   }
 
   #links-categorias a {
     text-decoration: none;
-    padding: .4em;
+    width: 95%;
+    padding-top: .4em;
+    padding-bottom: .4em;
   }
 }
