--- a/src/index.css
+++ b/src/index.css
@@ -147,15 +147,15 @@
 
 
   .header-buttons {
-    width: 99%;
+    width: 100%;
     background: #3333336b;
-    position: fixed;
+    position: sticky;
     display: flex;
     flex-direction: column;
-    top: 2em;
+    top: 0em;
     left: 50%;
-    transform: translate(-50%, -46%);
     text-align: center;
+    margin: 0;
   }
 
   .header-buttons #buttons {
@@ -213,7 +213,6 @@
   #Almacen-ul {
     background: rgb(126, 118, 218);
     background: linear-gradient(52deg, rgba(236, 235, 132, 1) 0%, rgba(35, 152, 208, 1) 100%);
-    margin-top: 7.5em;
   }
 
   #Verduleria-ul {
