--- a/src/index.css
+++ b/src/index.css
@@ -105,6 +105,7 @@
 
 @media screen and (max-width: 450px) {
   body {
+    width: auto;
     background-color: #f2f2f2;
     /* Color de fondo */
     color: #1a1919;
